<?xml version="1.0" encoding="utf-8"?>

<!-- Grow With Google Challenge Scholarship: Android Basics
     Project: 4
     Version: 1.0
     App Name: Cornucophony
     Author: Joseph McDonald -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/title_noise"
        style="@style/textview_noise_item" />

    <TextView
        android:id="@+id/item_bullet"
        style="@style/textview_noise_item"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:text="@string/item_bullet" />

    <TextView
        android:id="@+id/duration_noise"
        style="@style/textview_noise_item_duration"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard" />

    <ImageView
        android:id="@+id/unstar"
        style="@style/button_item"
        android:contentDescription="@string/unstar"
        android:src="@drawable/ic_action_star_0" />

    <ImageView
        android:id="@+id/star"
        style="@style/button_item"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_action_star_10"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/play"
        style="@style/button_item"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play_arrow" />

    <ImageView
        android:id="@+id/pause"
        style="@style/button_item"
        android:contentDescription="@string/pause"
        android:src="@drawable/ic_pause"
        android:visibility="gone" />

</LinearLayout>